UI fine tuning.  Fixed Navbar wrapping bug

--- a/static/css/flightscore.css
+++ b/static/css/flightscore.css
@@ -11,25 +11,20 @@ table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sor
     font-size: 12px;
 }
 
-/* navbar */
-nav {
-  height:100px;
-}
 
 /* Title */
-.navbar-default .navbar-brand {
-  color: #777;
-  /*    background-color: #669999;*/
+.navbar-brand {
   font-style: italic;
-  font-weight: 150;
+  font-weight: bold;
   font-size: 30px;
+  margin: 12px 10px 0px 15px;
 }
 
-/* Menu items */
-nav a {
-  font-size: 22px;
-  margin-left: 10px;
-  margin-top: 20px;
+/* Menu Choices */
+.navbar-nav {
+  font-size: 18px;
+  margin-top: 12px;
+
 }
 
 body, html {
@@ -48,4 +43,48 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.navbar-brand {
+    padding: 0;
+}
+@media (max-width: 1000px) {
+  .navbar-header {
+      float: none;
+  }
+  .navbar-left,.navbar-right {
+      float: none !important;
+  }
+  .navbar-toggle {
+      display: block;
+  }
+  .navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-fixed-top {
+      top: 0;
+      border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+      display: none!important;
+  }
+  .navbar-nav {
+      float: none!important;
+      margin-top: 7.5px;
+  }
+  .navbar-nav>li {
+      float: none;
+  }
+  .navbar-nav>li>a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+  }
+  .collapse.in{
+      display:block !important;
+  }
+    .navbar-brand {
+    display: inline-block;
+    float: none;
+  }
 }
